--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.min.css";
+@import "@angular/material/prebuilt-themes/purple-green.css";
+@import url('//fonts.googleapis.com/icon?family=Material+Icons');
