--- a/src/app/algorithms/higher-value/higher-value.component.html
+++ b/src/app/algorithms/higher-value/higher-value.component.html
@@ -14,4 +14,9 @@
             </button>
         </form>
     </mat-tab>
+    <mat-tab label="Fajl">
+        <textarea>
+        {{_filetext}}
+        </textarea>
+    </mat-tab>
 </mat-tab-group>
