--- a/src/app/algorithms/higher-value/higher-value.component.css
+++ b/src/app/algorithms/higher-value/higher-value.component.css
@@ -27,3 +27,14 @@ input {
     width: 100%;
     padding: 30px;
 }
+
+textarea {
+    width: 100%;
+    height: 1000px;
+    padding: 12px 20px;
+    border-radius: 4px;
+    background: transparent;
+    font-size: 16px;
+    resize: none;
+    color: white;
+  }
