--- a/src/app/algorithms/higher-value/higher-value.component.html
+++ b/src/app/algorithms/higher-value/higher-value.component.html
@@ -15,8 +15,22 @@
         </form>
     </mat-tab>
     <mat-tab label="Fajl">
-        <textarea>
-        {{_filetext}}
-        </textarea>
+        <mat-tab-group>
+            <mat-tab label="TypeScript">
+                <textarea readonly>
+                 {{tsCode}}
+                </textarea>
+            </mat-tab>
+            <mat-tab label="HTML">
+                <textarea readonly>
+                 {{htmlCode}}
+                </textarea>
+            </mat-tab>
+            <mat-tab label="CSS">
+                <textarea readonly>
+                {{cssCode}} 
+                </textarea>
+            </mat-tab>
+        </mat-tab-group>
     </mat-tab>
 </mat-tab-group>
