--- a/src/app/algorithms/higher-value/higher-value.component.html
+++ b/src/app/algorithms/higher-value/higher-value.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group>
     <mat-tab label="Opis">
-        <div class="text-center">Ovaj algoritam uvek vrši ispis većeg broja u prvu vrednost.</div>
+        <div class="text-center">{{ data.description }}</div>
     </mat-tab>
     <mat-tab label="Rešenje">
         <form class="input-group">
@@ -18,17 +18,17 @@
         <mat-tab-group>
             <mat-tab label="TypeScript">
                 <textarea readonly>
-                 {{tsCode}}
+                 {{data.tsCode}}
                 </textarea>
             </mat-tab>
             <mat-tab label="HTML">
                 <textarea readonly>
-                 {{htmlCode}}
+                 {{data.htmlCode}}
                 </textarea>
             </mat-tab>
             <mat-tab label="CSS">
                 <textarea readonly>
-                {{cssCode}} 
+                {{data.cssCode}} 
                 </textarea>
             </mat-tab>
         </mat-tab-group>
