--- a/src/app/algorithms/swap-value/swap-value.component.html
+++ b/src/app/algorithms/swap-value/swap-value.component.html
@@ -18,17 +18,17 @@
         <mat-tab-group>
             <mat-tab label="TypeScript">
                 <textarea readonly>
-                 {{tsCode}}
+                 {{data.tsCode}}
                 </textarea>
             </mat-tab>
             <mat-tab label="HTML">
                 <textarea readonly>
-                 {{htmlCode}}
+                 {{data.htmlCode}}
                 </textarea>
             </mat-tab>
             <mat-tab label="CSS">
                 <textarea readonly>
-                 {{cssCode}}
+                 {{data.cssCode}}
                 </textarea>
             </mat-tab>
         </mat-tab-group>
