--- a/src/app/show-component/show.component.html
+++ b/src/app/show-component/show.component.html
@@ -1,36 +1,27 @@
 <mat-tab-group>
-  <mat-tab label="Description">
-      <div class="text-center">{{data.description}}</div>
-  </mat-tab>
-  <mat-tab label="Solution">
-    <form class="input-group">
-        <label for="valueone">Value A:</label>
-        <input type='number' [(ngModel)]='valueA' id="valueone" name="valueone" />
-        <label for="valuetwo">Value B:</label>
-        <input type='number' [(ngModel)]='valueB' id="valuetwo" name="valuetwo" />
-    </form>
-    <form class="button-form">
-        <button class='btn btn-primary' (click)='algorithm(data.id)'> Apply
-        </button>
-    </form>
-</mat-tab>
-  <mat-tab label="File">
-      <mat-tab-group>
-          <mat-tab label="TypeScript">
-              <textarea readonly>
+    <mat-tab label="Description">
+        <div class="text-center">{{data.description}}</div>
+    </mat-tab>
+    <mat-tab label="Solution">
+        <ng-template solutionHost></ng-template>
+    </mat-tab>
+    <mat-tab label="File">
+        <mat-tab-group>
+            <mat-tab label="TypeScript">
+                <textarea readonly>
                {{tsCode}}
               </textarea>
-          </mat-tab>
-          <mat-tab label="HTML">
-              <textarea readonly>
+            </mat-tab>
+            <mat-tab label="HTML">
+                <textarea readonly>
                {{htmlCode}}
               </textarea>
-          </mat-tab>
-          <mat-tab label="CSS">
-              <textarea readonly>
+            </mat-tab>
+            <mat-tab label="CSS">
+                <textarea readonly>
                {{cssCode}}
               </textarea>
-          </mat-tab>
-      </mat-tab-group>
-  </mat-tab>
+            </mat-tab>
+        </mat-tab-group>
+    </mat-tab>
 </mat-tab-group>
