--- a/src/app/algorithms/higher-value/higher-value.component.html
+++ b/src/app/algorithms/higher-value/higher-value.component.html
@@ -1,8 +1,10 @@
 <form class="input-group">
-    <label for="valueone">Vrednost A:</label>
+    <label for="valueone">Value A:</label>
     <input type='number' [(ngModel)]='valueA' id="valueone" name="valueone" />
-    <label for="valuetwo">Vrednost B:</label>
+    <label for="valuetwo">Value B:</label>
     <input type='number' [(ngModel)]='valueB' id="valuetwo" name="valuetwo" />
 </form>
 <form class="button-form">
-    <button class='btn btn-primary' (click)='outputA()'> Pokreni
+    <button class='btn btn-primary' (click)='outputA()'> Apply
+    </button>
+</form>
