--- a/src/app/algorithms/swap-value/swap-value.component.html
+++ b/src/app/algorithms/swap-value/swap-value.component.html
@@ -1,10 +1,10 @@
 <form class="input-group">
-    <label for="valueone">Prva vrednost:</label>
+    <label for="valueone">First value:</label>
     <input type='number' [(ngModel)]='prvaVrednost' id="valueone" name="valueone" />
-    <label for="valuetwo">Druga vrednost:</label>
+    <label for="valuetwo">Second value:</label>
     <input type='number' [(ngModel)]='drugaVrednost' id="valuetwo" name="valuetwo" />
 </form>
 <form class="button-form">
-    <button class='btn btn-primary' (click)='swapValues()'> Zameni
+    <button class='btn btn-primary' (click)='swapValues()'> Switch
     </button>
 </form>
