--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,18 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav mode="over" [fixedInViewport]="true" opened mode="side">
     <mat-accordion>
-      <!-- <a mat-button style="text-align: center">
-        <mat-icon (click)="loadHome()">
-          Algoritms
-        </mat-icon>
-      </a> -->
-      <mat-expansion-panel>
+      <mat-expansion-panel hideToggle [expanded]="true"  [disabled]="true">
         <mat-expansion-panel-header>
-          <mat-panel-title>
+          <mat-panel-title (click)="loadHome()" (click)="selectedIndex = -1">
             Algorithms
           </mat-panel-title>
+          <mat-panel-description>
+            <mat-icon (click)="openDialog()">add</mat-icon>
+          </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-nav-list *ngFor="let alg of algs">
-          <a mat-button (click)="getAlgs(alg.data.id)">{{alg.data.title}}</a>
+          <a mat-raised-button (click)="getAlgs(alg.data.id)" (click)="selectedIndex = alg.data.id" [color]="selectedIndex === alg.data.id ? 'primary' : 'warm'">{{alg.data.title}} <mat-icon (click)="removeDialog(alg.data.title)">remove</mat-icon></a>
         </mat-nav-list>
-        <div (contextmenu)="onRightClick($event)" style="padding-bottom: 20px;">
-        </div>
-
-        <!-- an hidden div is created to set the position of appearance of the menu-->
-        <div style="visibility: hidden; position: fixed;" [style.left]="menuTopLeftPosition.x"
-          [style.top]="menuTopLeftPosition.y" [matMenuTriggerFor]="menu"></div>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="openDialog()">
-            <span>Add</span>
-          </button>
-          <button mat-menu-item (click)="removeDialog()">
-            <span>Remove</span>
-          </button>
-        </mat-menu>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-sidenav>
