--- a/src/app/dialogs/remove-dialog/remove-dialog.component.html
+++ b/src/app/dialogs/remove-dialog/remove-dialog.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Remove algorithm</h1>
 <div mat-dialog-content>
   <mat-form-field appearance="fill">
-    <mat-label>Algorithm's name:</mat-label>
-    <input matInput [(ngModel)]="data.title">
+    <mat-label>Delete this algorithm?</mat-label>
+    <input disabled matInput [(ngModel)]="data.title">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
