--- a/src/app/algorithms/bar-chart/bar-chart.component.html
+++ b/src/app/algorithms/bar-chart/bar-chart.component.html
@@ -1,8 +1,19 @@
 <form class="input-group">
     <label for="value">Enter numbers:</label>
-    <input type='number' [(ngModel)]='inputArray' id="value" name="value" />
+    <input type='string' [(ngModel)]='inputArray' id="value" name="value" />
 </form>
 <form class="button-form">
     <button class='btn btn-primary' (click)='createBarChart()'> Create
     </button>
+</form>
+<form class="chart-form">
+<canvas baseChart 
+        [data]="barChartData"
+        [options]="barChartOptions"
+        [plugins]="barChartPlugins"
+        [legend]="barChartLegend"
+        [width]="600"
+        [height]="400"
+        [type]="'bar'">
+</canvas>
 </form>
