bar chart using HTML

--- a/src/app/algorithms/bar-chart/bar-chart.component.css
+++ b/src/app/algorithms/bar-chart/bar-chart.component.css
@@ -10,7 +10,7 @@
     padding: 30px;
 }
 
-.output-group{
+.output-group {
     min-width: 150px;
     max-width: 500px;
     width: 100%;
@@ -30,10 +30,17 @@ input {
 
 .button-form {
     min-width: 150px;
-    max-width: 500px;
+    max-width: 250px;
     width: 100%;
     padding: 30px;
     margin-top: -30px;
+    float: left;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.btn-primary {
+    margin-right: 10px;
 }
 
 textarea {
@@ -45,9 +52,21 @@ textarea {
     font-size: 16px;
     resize: none;
     color: white;
-  }
+}
 
-.chart-form {
-    padding-left: 350px;
-    margin-top: -50px;
+.chart {
+    height: 500px;
+    width:800px; 
+    margin:0 auto;
+}
+
+.bar {
+    width: 20px;
+    background-color: #9C27B0;
+    margin-left: 10px;
+}
+
+.table {
+    align-self: center;
+    display:inline-flex;
 }
