bars insertion sort

--- a/src/app/algorithms/sort-bars/sort-bars.component.html
+++ b/src/app/algorithms/sort-bars/sort-bars.component.html
@@ -1,9 +1,5 @@
-<form class="input-group">
-    <label for="value">Input the positions of bars:</label>
-    <input type='string' [(ngModel)]='inputArray' id="value" name="value" />
-</form>
 <form class="button-form">
-    <button class='btn btn-primary' (click)='swapBars()'> Swap
+    <button class='btn btn-primary' (click)='insertionSort()'> Sort
     </button>
     <button class='btn btn-primary' (click)="randomBarChart()"> Random
     </button>
