--- a/src/app/algorithms/sort-bars/sort-bars.component.css
+++ b/src/app/algorithms/sort-bars/sort-bars.component.css
@@ -37,6 +37,7 @@ input {
     float: left;
     margin-right: 15px;
     margin-left: 15px;
+    margin-top: 25px;
 }
 
 .btn-primary {
@@ -59,6 +60,7 @@ textarea {
     width:800px; 
     margin:0 auto;
     margin-left: 400px;
+    margin-top: 100px;
 }
 
 .bar {
