--- a/src/app/algorithms/bubble-sort/bubble-sort.component.html
+++ b/src/app/algorithms/bubble-sort/bubble-sort.component.html
@@ -1,5 +1,5 @@
 <form class="button-form">
-    <button class='btn btn-primary' (click)='bubbleSort1()'> Sort
+    <button class='btn btn-primary' (click)='bubbleSort()'> Sort
     </button>
     <button class='btn btn-primary' (click)="randomBarChart()"> Random
     </button>
