find n prime numbers

--- a/src/app/algorithms/prime-find/prime-find.component.html
+++ b/src/app/algorithms/prime-find/prime-find.component.html
@@ -1,1 +1,16 @@
-<p>prime-find works!</p>
+<form class="input-group">
+    <label for="value">Enter a value:</label>
+    <input type='number' [(ngModel)]='value' (ngModelChange)="onChange($event)" id="value" name="value" />
+</form>
+<form class="button-form">
+    <button class='btn btn-primary' (click)='findPrimeNumbers()'> Enter
+    </button>
+</form>
+<form class="output-group" *ngIf="displaySolution">
+    <label for="output">First {{value}} prime numbers are:</label>
+    <label type='number' *ngFor="let o of primeNumbers" id="output" name="output">{{o}}</label>
+</form>
+<form class="output-group" *ngIf="displayError">
+    <label for="output">You must enter a number greater or equal to 1.</label>
+</form>
+
