longest common subsequence

--- a/src/app/algorithms/string-container/string-container.component.html
+++ b/src/app/algorithms/string-container/string-container.component.html
@@ -1,4 +1,4 @@
-<form class="input-group">
+<form class="input-group" autocomplete="off">
     <label for="value1">Enter first string:</label>
     <input type='string' [(ngModel)]='firstString' (ngModelChange)="onChange($event)" id="value1" name="value1" />
     <label for="value2">Enter second string:</label>
