--- a/src/app/algorithms/substring/substring.component.html
+++ b/src/app/algorithms/substring/substring.component.html
@@ -1,1 +1,14 @@
-<p>substring works!</p>
+<form class="input-group" autocomplete="off">
+    <label for="value1">Enter first string:</label>
+    <input type='string' [(ngModel)]='firstString' (ngModelChange)="onChange($event)" id="value1" name="value1" />
+    <label for="value2">Enter second string:</label>
+    <input type='string' [(ngModel)]='secondString' (ngModelChange)="onChange($event)" id="value2" name="value2" />
+</form>
+<form class="button-form">
+    <button class='btn btn-primary' (click)='lcs(firstString, secondString)'> Find
+    </button>
+</form>
+<form class="output-group" *ngIf="displayAnswer">
+    <label for="output">The longest common subsequence is: {{subsequence}}</label>
+</form>
+
