--- a/src/app/algorithms/sierpinski-triangle/sierpinski-triangle.component.html
+++ b/src/app/algorithms/sierpinski-triangle/sierpinski-triangle.component.html
@@ -7,8 +7,8 @@
     </button>
 </form>
 <form class="output-group" *ngIf="displayError">
-    <label for="output">You must enter a number within the range of 1-7</label>
+    <label for="output">You must enter a number within the range of 1-10</label>
 </form>
 <form class="output-group">
-    <canvas #canvas></canvas>
+    <canvas width="800" height="450"#canvas></canvas>
 </form>
