--- a/src/app/algorithms/sierpinski-triangle/sierpinski-triangle.component.css
+++ b/src/app/algorithms/sierpinski-triangle/sierpinski-triangle.component.css
@@ -49,7 +49,7 @@ textarea {
 
   canvas {
     border-style: solid;
-    width: 800px;
-    height: 500px;
+    /* width: 800px;
+    height: 500px; */
     margin-left: 200px;
   }
