multiple bouncing balls

--- a/src/app/algorithms/bouncing-ball/bouncing-ball.component.html
+++ b/src/app/algorithms/bouncing-ball/bouncing-ball.component.html
@@ -1,1 +1,9 @@
 <canvas width="800" height="450" #myCanvas></canvas>
+<form class="input-group">
+    <label for="value">Enter numbers:</label>
+    <input type='string' [(ngModel)]='inputAngles' id="value" name="value" />
+</form>
+<form class="button-form">
+    <button class='btn btn-primary' (click)="startBalls()"> Start
+    </button>
+</form>
