--- a/src/app/algorithms/bouncing-ball/bouncing-ball.component.css
+++ b/src/app/algorithms/bouncing-ball/bouncing-ball.component.css
@@ -1,10 +1,55 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
-  }
+  } */
   canvas {
     background: #eee;
     display: block;
     margin-left: 200px;
     margin-top: 50px;
   }
+
+  .text-center {
+    text-align: center;
+    padding: 50px 0 50px;
+}
+
+.input-group {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+    padding: 30px;
+    margin-left: 170px;
+}
+
+label {
+    display: inline-block;
+    clear: left;
+    width: 250px;
+    text-align: left;
+}
+
+input {
+    display: inline-block;
+}
+
+.button-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+    margin-left: 200px;
+}
+
+textarea {
+    width: 100%;
+    height: 1000px;
+    padding: 12px 20px;
+    border-radius: 4px;
+    background: transparent;
+    font-size: 16px;
+    resize: none;
+    color: white;
+  }
+
+
+
