bouncing ball rework

--- a/src/app/algorithms/bouncing-ball/bouncing-ball.component.html
+++ b/src/app/algorithms/bouncing-ball/bouncing-ball.component.html
@@ -3,6 +3,10 @@
     <label for="value">Enter angles:</label>
     <input type='string' [(ngModel)]='inputAngles' id="value" name="value" />
 </form>
+<form class="forma">
+    <label for="value">Enter paddle info:</label>
+    <input type='string' [(ngModel)]='paddleInput' id="value" name="value" />
+</form>
 <form class="button-form">
     <button class='btn btn-primary' (click)="startBalls()"> Start
     </button>
