--- a/src/app/algorithms/subsequence/subsequence.component.html
+++ b/src/app/algorithms/subsequence/subsequence.component.html
@@ -1,8 +1,8 @@
 <form class="input-group" autocomplete="off">
     <label for="value1">Enter first string:</label>
-    <input type='string' [(ngModel)]='firstString' (ngModelChange)="onChange($event)" id="value1" name="value1" />
+    <input type='string' [(ngModel)]='firstString' (ngModelChange)="onChange()" id="value1" name="value1" />
     <label for="value2">Enter second string:</label>
-    <input type='string' [(ngModel)]='secondString' (ngModelChange)="onChange($event)" id="value2" name="value2" />
+    <input type='string' [(ngModel)]='secondString' (ngModelChange)="onChange()" id="value2" name="value2" />
 </form>
 <form class="button-form">
     <button class='btn btn-primary' (click)='lcs(firstString, secondString)'> Find
